--- a/style.css
+++ b/style.css
@@ -90,13 +90,6 @@ body {
   transition: all 0.1s;
 }
 
-/* .progTxtOne {
-  position: absolute;
-  top: 50%;
-  left: 5px;
-  transform: translateY(-50%);
-}  */
-
 .progFillTwo {
   width: 100%;
   height: 50%;
@@ -107,10 +100,58 @@ body {
   transition: all 0.1s;
 }
 
-/* .progTxtTwo {
-  position: absolute;
-  top: 50%;
-  right: 5px;
-  transform: translateY(-50%);
-} */
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
 
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 2px solid black;
+  width: 50%; 
+  height: 30%;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  font-size: 2vw;
+}
+
+#modalBoxOne {
+  background-color: rgba(255, 233, 244, 1);
+}
+
+#modalBoxTwo {
+  background-color: rgba(243, 252, 253, 1);
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  position: absolute;
+  top: 0px;
+  right: 15px;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
